Fix to spacing

--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -16,7 +16,7 @@
   right: 10px;
   background-color: white;
   box-shadow: 0px 0px 5px #aaa;
-  border-radius: 5px;
+  border-radius: 3px;
   padding: 0px;
   list-style: none;
   color: #172B4E;
